--- a/module1/index.html
+++ b/module1/index.html
@@ -40,7 +40,7 @@
                     tested for security, so you can store your data here
                     safely but not be afraid of being stolen by others.
                 </p>
-                <a href="#" class="intro__btn"><button class="intro__btn">Learn more</button></a>
+                <a href="#" class="intro__btn"><button type="button" class="intro__btn">Learn more</button></a>
             </div>
             <div class="intro__img-container"></div>
         </section>
@@ -76,7 +76,7 @@
                             the Data Warehoue provides a search engine,
                             which is useful for making it easier to find data effectively saving time.
                         </p>
-                        <a class="feature__link" href="#">Learn more &#8594;</a>
+                        <a class="feature__link" href="#">Learn more &rarr;</a>
                     </div>
                 </li>
 
@@ -89,7 +89,7 @@
                             meet again in the morning, giving you comfort when
                             you need data when urgent.
                         </p>
-                        <a class="feature__link" href="#">Learn more &#8594;</a>
+                        <a class="feature__link" href="#">Learn more &rarr;</a>
                     </div>
                 </li>
 
@@ -101,7 +101,7 @@
                             Print out service gives you convenience if someday
                             you need print data, just edit it all and just print it.
                         </p>
-                        <a class="feature__link" href="#">Learn more &#8594;</a>
+                        <a class="feature__link" href="#">Learn more &rarr;</a>
                     </div>
                 </li>
 
@@ -114,10 +114,66 @@
                             to be safer. The file can be secured with a code or password that
                             you created, so only you can open the file.
                         </p>
-                        <a class="feature__link" href="#">Learn more &#8594;</a>
+                        <a class="feature__link" href="#">Learn more &rarr;</a>
                     </div>
                 </li>
             </ul>
+        </section>
+
+        <section class="slider">
+            <h2 class="slider__title">Testimonials</h2>
+            <div class="slider__list">
+
+                <div class="slider__item">
+                    <img class="slider__item-avatar" src="./images/avatar1.png" alt="аватарка">
+                    <div class="slider__item-container slider__item-container_active">
+                        <p class="slider__item-name">John Fang</p>
+                        <a href="#" class="slider__item-profession">wordfaang.com</a>
+                        <p class="slider__item-text">
+                            Suspendisse ultrices at diam lectus nullam.
+                            Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
+                            laoreet nulla.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="slider__item">
+                    <img class="slider__item-avatar" src="./images/avatar1.png" alt="аватарка">
+                    <div class="slider__item-container">
+                        <p class="slider__item-name">Jeny Doe</p>
+                        <a class="slider__item-profession">UX Engineer</a>
+                        <p class="slider__item-text">
+                            Suspendisse ultrices at diam lectus nullam. Nisl,
+                            sagittis viverra enim erat tortor
+                        </p>
+                    </div>
+                </div>
+
+                <!--<div class="slider__item">
+                    <img class="slider__item-avatar" src="./images/avatar1.png" alt="аватарка">
+                    <div class="slider__item-container">
+                        <p class="slider__item-name">William</p>
+                        <a class="slider__item-profession">Web Designer</a>
+                        <p class="slider__item-text">
+                            Suspendisse ultrices at diam lectus nullam. Nisl,
+                            sagittis viverra enim erat tortor
+                        </p>
+                    </div>
+                </div>-->
+
+            </div>
+            <div class="slider__nav">
+                <div class="slider__dots">
+                    <button type="button" class="alider__dot">&bull;</button>
+                    <button type="button" class="alider__dot">&bull;</button>
+                    <button type="button" class="alider__dot">&bull;</button>
+                    <button type="button" class="alider__dot">&bull;</button>
+                </div>
+                <div class="slider__arrows">
+                    <button type="button" class="slider__arrows-next">&larr;</button>
+                    <button type="button" class="slider__arrows-prev">&rarr;</button>
+                </div>
+            </div>
         </section>
     </main>
 </body>
