--- a/module1/index.html
+++ b/module1/index.html
@@ -1,181 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Data Warehouse is a data storage area that has been
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Data Warehouse is a data storage area that has been
     tested for security, so you can store your data here
-    safely but not be afraid of being stolen by others.">
-    <meta name="keywords" content="warehouse, save, data, security, storage, area">
-    <meta property="og:title" content="Save your data in our high-level data storage bank" />
+    safely but not be afraid of being stolen by others."
+    />
+    <meta
+      name="keywords"
+      content="warehouse, save, data, security, storage, area"
+    />
+    <meta
+      property="og:title"
+      content="Save your data in our high-level data storage bank"
+    />
     <meta property="og:url" content="https://www.ratiodatawarehouse.ru" />
     <meta property="og:image" content="" />
     <!--добавить линк-->
     <meta property="og:type" content="article" />
-    <link rel="icon" href="./images/Logo.svg" type="image/svg">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="icon" href="./images/Logo.svg" type="image/svg" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Warehouse - Save your data storage here.</title>
-</head>
+  </head>
 
-<body class="page">
-
+  <body class="page">
     <header class="header">
-        <img class="header__logo logo" src="./images/Logo.svg" alt="логотип">
-        <nav class="header__nav">
-            <a href="#" class="header__nav-link">About</a>
-            <a href="#" class="header__nav-link">Help</a>
-            <a href="#" class="header__nav-link">Features</a>
-        </nav>
+      <img class="header__logo logo" src="./images/Logo.svg" alt="логотип" />
+      <nav class="header__nav">
+        <a href="#" class="header__nav-link">About</a>
+        <a href="#" class="header__nav-link">Help</a>
+        <a href="#" class="header__nav-link">Features</a>
+      </nav>
     </header>
 
     <main class="main">
+      <section class="intro">
+        <div class="intro__text-container">
+          <h1 class="intro__title">Save your data storage here.</h1>
+          <p class="intro__text">
+            Data Warehouse is a data storage area that has been tested for
+            security, so you can store your data here safely but not be afraid
+            of being stolen by others.
+          </p>
+          <a href="#" class="intro__btn"
+            ><button type="button" class="intro__btn">Learn more</button></a
+          >
+        </div>
+        <div class="intro__img-container"></div>
+      </section>
 
-        <section class="intro">
-            <div class="intro__text-container">
-                <h1 class="intro__title">Save your data storage here.</h1>
-                <p class="intro__text">
-                    Data Warehouse is a data storage area that has been
-                    tested for security, so you can store your data here
-                    safely but not be afraid of being stolen by others.
-                </p>
-                <a href="#" class="intro__btn"><button type="button" class="intro__btn">Learn more</button></a>
+      <section class="about-us">
+        <div class="about-us__img-container"></div>
+        <article class="about-us__article">
+          <h2 class="about-us__title">We are a high-level data storage bank</h2>
+          <p class="about-us__text">
+            The place to store various data that you can access at any time
+            through the internet and where you can carry it. This very flexible
+            storage area has a high level of security. To enter into your own
+            data you must enter the password that you created when you
+            registered in this Data Warehouse.
+          </p>
+        </article>
+      </section>
+
+      <section class="features">
+        <h2 class="features__title">Features</h2>
+        <p class="features__subtitle">
+          Some of the features and advantages that we provide for those of you
+          who store data in this Data Warehouse.
+        </p>
+        <ul class="features__list">
+          <li class="feature">
+            <img
+              class="feature__img"
+              src="./images/feature1.png"
+              alt="картинка"
+            />
+            <div class="feature__text-container">
+              <h3 class="feature__title">Search Data</h3>
+              <p class="feature__text">
+                Don’t worry if your data is very large, the Data Warehoue
+                provides a search engine, which is useful for making it easier
+                to find data effectively saving time.
+              </p>
+              <a class="feature__link" href="#">Learn more &rarr;</a>
             </div>
-            <div class="intro__img-container"></div>
-        </section>
+          </li>
 
-        <section class="about-us">
-            <div class="about-us__img-container"></div>
-            <article class="about-us__article">
-                <h2 class="about-us__title">We are a high-level data storage bank</h2>
-                <p class="about-us__text">
-                    The place to store various data that you can access at any time
-                    through the internet and where you can carry it.
-                    This very flexible storage area has a high level of security.
-                    To enter into your own data you must enter the password that
-                    you created when you registered in this Data Warehouse.
-                </p>
-            </article>
-        </section>
-
-        <section class="features">
-            <h2 class="features__title">Features</h2>
-            <p class="features__subtitle">
-                Some of the features and advantages that we provide for those of you
-                who store data in this Data Warehouse.
-            </p>
-            <ul class="features__list">
-
-                <li class="feature">
-                    <img class="feature__img" src="./images/feature1.png" alt="картинка">
-                    <div class="feature__text-container">
-                        <h3 class="feature__title">Search Data</h3>
-                        <p class="feature__text">
-                            Don’t worry if your data is very large,
-                            the Data Warehoue provides a search engine,
-                            which is useful for making it easier to find data effectively saving time.
-                        </p>
-                        <a class="feature__link" href="#">Learn more &rarr;</a>
-                    </div>
-                </li>
-
-                <li class="feature">
-                    <img class="feature__img" src="./images/feature2.png" alt="картинка">
-                    <div class="feature__text-container">
-                        <h3 class="feature__title">24 Hours Access</h3>
-                        <p class="feature__text">
-                            Access is given 24 hours a full morning to night and
-                            meet again in the morning, giving you comfort when
-                            you need data when urgent.
-                        </p>
-                        <a class="feature__link" href="#">Learn more &rarr;</a>
-                    </div>
-                </li>
-
-                <li class="feature">
-                    <img class="feature__img" src="./images/feature3.png" alt="картинка">
-                    <div class="feature__text-container">
-                        <h3 class="feature__title">Print Out</h3>
-                        <p class="feature__text">
-                            Print out service gives you convenience if someday
-                            you need print data, just edit it all and just print it.
-                        </p>
-                        <a class="feature__link" href="#">Learn more &rarr;</a>
-                    </div>
-                </li>
-
-                <li class="feature">
-                    <img class="feature__img" src="./images/feature4.png" alt="картинка">
-                    <div class="feature__text-container">
-                        <h3 class="feature__title">Security Code</h3>
-                        <p class="feature__text">
-                            Data Security is one of our best facilities. Allows for your files
-                            to be safer. The file can be secured with a code or password that
-                            you created, so only you can open the file.
-                        </p>
-                        <a class="feature__link" href="#">Learn more &rarr;</a>
-                    </div>
-                </li>
-            </ul>
-        </section>
-
-        <section class="slider">
-            <h2 class="slider__title">Testimonials</h2>
-            <div class="slider__list">
-
-                <div class="slider__item">
-                    <img class="slider__item-avatar" src="./images/avatar1.png" alt="аватарка">
-                    <div class="slider__item-container slider__item-container_active">
-                        <p class="slider__item-name">John Fang</p>
-                        <a href="#" class="slider__item-profession">wordfaang.com</a>
-                        <p class="slider__item-text">
-                            Suspendisse ultrices at diam lectus nullam.
-                            Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
-                            laoreet nulla.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="slider__item">
-                    <img class="slider__item-avatar" src="./images/avatar1.png" alt="аватарка">
-                    <div class="slider__item-container">
-                        <p class="slider__item-name">Jeny Doe</p>
-                        <a class="slider__item-profession">UX Engineer</a>
-                        <p class="slider__item-text">
-                            Suspendisse ultrices at diam lectus nullam. Nisl,
-                            sagittis viverra enim erat tortor
-                        </p>
-                    </div>
-                </div>
-
-                <!--<div class="slider__item">
-                    <img class="slider__item-avatar" src="./images/avatar1.png" alt="аватарка">
-                    <div class="slider__item-container">
-                        <p class="slider__item-name">William</p>
-                        <a class="slider__item-profession">Web Designer</a>
-                        <p class="slider__item-text">
-                            Suspendisse ultrices at diam lectus nullam. Nisl,
-                            sagittis viverra enim erat tortor
-                        </p>
-                    </div>
-                </div>-->
-
+          <li class="feature">
+            <img
+              class="feature__img"
+              src="./images/feature2.png"
+              alt="картинка"
+            />
+            <div class="feature__text-container">
+              <h3 class="feature__title">24 Hours Access</h3>
+              <p class="feature__text">
+                Access is given 24 hours a full morning to night and meet again
+                in the morning, giving you comfort when you need data when
+                urgent.
+              </p>
+              <a class="feature__link" href="#">Learn more &rarr;</a>
             </div>
-            <div class="slider__nav">
-                <div class="slider__dots">
-                    <button type="button" class="alider__dot">&bull;</button>
-                    <button type="button" class="alider__dot">&bull;</button>
-                    <button type="button" class="alider__dot">&bull;</button>
-                    <button type="button" class="alider__dot">&bull;</button>
-                </div>
-                <div class="slider__arrows">
-                    <button type="button" class="slider__arrows-next">&larr;</button>
-                    <button type="button" class="slider__arrows-prev">&rarr;</button>
-                </div>
+          </li>
+
+          <li class="feature">
+            <img
+              class="feature__img"
+              src="./images/feature3.png"
+              alt="картинка"
+            />
+            <div class="feature__text-container">
+              <h3 class="feature__title">Print Out</h3>
+              <p class="feature__text">
+                Print out service gives you convenience if someday you need
+                print data, just edit it all and just print it.
+              </p>
+              <a class="feature__link" href="#">Learn more &rarr;</a>
             </div>
-        </section>
+          </li>
+
+          <li class="feature">
+            <img
+              class="feature__img"
+              src="./images/feature4.png"
+              alt="картинка"
+            />
+            <div class="feature__text-container">
+              <h3 class="feature__title">Security Code</h3>
+              <p class="feature__text">
+                Data Security is one of our best facilities. Allows for your
+                files to be safer. The file can be secured with a code or
+                password that you created, so only you can open the file.
+              </p>
+              <a class="feature__link" href="#">Learn more &rarr;</a>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="slider">
+        <h2 class="slider__title">Testimonials</h2>
+        <div class="slider__list">
+          <div class="slider__item">
+            <img
+              class="slider__item-avatar"
+              src="./images/avatar1.png"
+              alt="аватарка"
+            />
+            <div class="slider__item-container slider__item-container_active">
+              <p class="slider__item-name">John Fang</p>
+              <a href="#" class="slider__item-profession">wordfaang.com</a>
+              <p class="slider__item-text">
+                Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
+                aenean nam laoreet nulla.
+              </p>
+            </div>
+          </div>
+
+          <div class="slider__item slider__item_second">
+            <img
+              class="slider__item-avatar slider__item-avatar_unactive"
+              src="./images/avatar2.png"
+              alt="аватарка"
+            />
+            <div class="slider__item-container">
+              <p class="slider__item-name">Jeny Doe</p>
+              <a class="slider__item-profession">UX Engineer</a>
+              <p class="slider__item-text slider__item-text_unactive">
+                Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
+                aenean nam laoreet nulla.
+              </p>
+            </div>
+          </div>
+
+          <div class="slider__item slider__item_third">
+            <img
+              class="slider__item-avatar slider__item-avatar_unactive"
+              src="./images/avatar3.png"
+              alt="аватарка"
+            />
+            <div class="slider__item-container">
+              <p class="slider__item-name">William</p>
+              <a class="slider__item-profession">Web Designer</a>
+              <p class="slider__item-text slider__item-text_unactive">
+                Suspendisse ultrices at diam lectus nullam. Nisl, sagittis
+                viverra enim erat tortor ultricies massa turpis. Arcu pulvinar
+                aenean nam laoreet nulla.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="slider__nav">
+          <div class="slider__dots">
+            <button
+              type="button"
+              class="slider__dot slider__dot_active"
+            ></button>
+            <button type="button" class="slider__dot"></button>
+            <button type="button" class="slider__dot"></button>
+            <button type="button" class="slider__dot"></button>
+          </div>
+          <div class="slider__arrows">
+            <button
+              type="button"
+              class="slider__arrow slider__arrow_next"
+            ></button>
+            <button
+              type="button"
+              class="slider__arrow slider__arrow_prev"
+            ></button>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
 
+    <footer class="footer">
+        <div class="footer__container"></div>
+    </footer>
+  </body>
 </html>
