--- a/module1/index.html
+++ b/module1/index.html
@@ -227,45 +227,51 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__text-container">
-        <div class="footer__logo-container">
-          <a href="#">
-            <img class="footer__logo logo" src="./images/Logo.svg" alt="logo" />
-          </a>
-          <p class="footer__logo-title">DataWarehouse</p>
+      <div class="footer__main-container">
+        <div class="footer__text-container">
+          <div class="footer__logo-container">
+            <a href="#">
+              <img
+                class="footer__logo logo"
+                src="./images/Logo.svg"
+                alt="logo"
+              />
+            </a>
+            <p class="footer__logo-title">DataWarehouse</p>
+          </div>
+          <p class="footer__info-adress">
+            Warehouse Society, 234<br />
+            Bahagia Ave Street PRBW 29281
+          </p>
+          <p class="footer__info-contacts">
+            info@warehouse.project<br />
+            1-232-3434 (Main)
+          </p>
+          <p class="footer__copyright">
+            © Datawarehouse™, 2020. All rights reserved.<br />
+            Company Registration Number: 21479524.
+          </p>
         </div>
-        <p class="footer__info-adress">
-          Warehouse Society, 234<br />
-          Bahagia Ave Street PRBW 29281
-        </p>
-        <p class="footer__info-contacts">
-          info@warehouse.project<br />
-          1-232-3434 (Main)
-        </p>
-        <p class="footer__copyright">
-          © Datawarehouse™, 2020. All rights reserved.<br />
-          Company Registration Number: 21479524.
-        </p>
-      </div>
-      <div class="footer__nav">
-        <p class="footer__nav-title">Social Media</p>
-        <ul class="footer__links">
-          <li>
-            <a href="#" target="_blank">
-              <button type="button" class="footer__link"></button>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <button type="button" class="footer__link"></button>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <button type="button" class="footer__link"></button>
-            </a>
-          </li>
-        </ul>
+        <div class="footer__nav">
+          <p class="footer__nav-title">Social Media</p>
+          <ul class="footer__links">
+            <li>
+              <a href="#" target="_blank">
+                <button type="button" class="footer__link"></button>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <button type="button" class="footer__link"></button>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <button type="button" class="footer__link"></button>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
