--- a/module1/index.html
+++ b/module1/index.html
@@ -29,14 +29,16 @@
 
   <body class="page">
     <header class="header">
-      <a href="#">
-        <img class="header__logo logo" src="./images/Logo.svg" alt="logo" />
-      </a>
-      <nav class="header__nav">
-        <a href="#" class="header__nav-link">About</a>
-        <a href="#" class="header__nav-link">Help</a>
-        <a href="#" class="header__nav-link">Features</a>
-      </nav>
+      <div class="header__container">
+        <a href="#">
+          <img class="header__logo logo" src="./images/Logo.svg" alt="logo" />
+        </a>
+        <nav class="header__nav">
+          <a href="#" class="header__nav-link">About</a>
+          <a href="#" class="header__nav-link">Help</a>
+          <a href="#" class="header__nav-link">Features</a>
+        </nav>
+      </div>
     </header>
 
     <main class="main">
