--- a/module1/index.html
+++ b/module1/index.html
@@ -34,9 +34,9 @@
           <img class="header__logo logo" src="./images/Logo.svg" alt="logo" />
         </a>
         <nav class="header__nav">
-          <a href="#" class="header__nav-link">About</a>
-          <a href="#" class="header__nav-link">Help</a>
-          <a href="#" class="header__nav-link">Features</a>
+          <a href="#about-us" class="header__nav-link">About</a>
+          <a href="#footer" class="header__nav-link">Help</a>
+          <a href="#features" class="header__nav-link">Features</a>
         </nav>
       </div>
     </header>
@@ -50,17 +50,23 @@
             security, so you can store your data here safely but not be afraid
             of being stolen by others.
           </p>
-          <a href="#" class="intro__btn">
+          <a href="#features" class="intro__btn">
             <button type="button" class="intro__btn">Learn more</button>
           </a>
         </div>
-        <img class="intro__img-container" src="./images/intro.png" />
-        <!--класс переименовать, добавить альт-->
+        <img
+          class="intro__img-container"
+          src="./images/intro.png"
+          alt="intro image with girls studying graphs"
+        />
       </section>
 
-      <section class="about-us">
-        <img class="about-us__img-container" src="./images/aboutUs.png" />
-        <!--класс переименовать, добавить альт-->
+      <section class="about-us" id="about-us">
+        <img
+          class="about-us__img-container"
+          src="./images/aboutUs.png"
+          alt="another image with graphs"
+        />
         <article class="about-us__article">
           <h2 class="about-us__title">We are a high-level data storage bank</h2>
           <p class="about-us__text">
@@ -73,7 +79,7 @@
         </article>
       </section>
 
-      <section class="features">
+      <section class="features" id="features">
         <h2 class="features__title">Features</h2>
         <p class="features__subtitle">
           Some of the features and advantages that we provide for those of you
@@ -228,7 +234,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__main-container">
         <div class="footer__text-container">
           <div class="footer__logo-container">
