--- a/module1/index.html
+++ b/module1/index.html
@@ -28,6 +28,7 @@
   </head>
 
   <body class="page">
+    <!-- Глянул -->
     <header class="header">
       <div class="header__container">
         <a href="#">
